provisioning/files/networks/iptables_def.rules
# Generated by iptables-save v1.8.4 on Tue Aug  8 13:31:52 2023
*raw
:PREROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
COMMIT
# Completed on Tue Aug  8 13:31:52 2023
# Generated by iptables-save v1.8.4 on Tue Aug  8 13:31:52 2023
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
COMMIT
# Completed on Tue Aug  8 13:31:52 2023
# Generated by iptables-save v1.8.4 on Tue Aug  8 13:31:52 2023
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
#
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -s 192.168.0.0/30 -p icmp -m icmp --icmp-type 3 -j ACCEPT
-A INPUT -s 192.168.0.0/30 -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A INPUT -s 192.168.0.0/30 -p icmp -m icmp --icmp-type 11 -j ACCEPT
-A INPUT -s 192.168.0.4/30 -p icmp -m icmp --icmp-type 3 -j ACCEPT
-A INPUT -s 192.168.0.4/30 -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A INPUT -s 192.168.0.4/30 -p icmp -m icmp --icmp-type 11 -j ACCEPT
-A INPUT -s 192.168.0.8/30 -p icmp -m icmp --icmp-type 3 -j ACCEPT
-A INPUT -s 192.168.0.8/30 -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A INPUT -s 192.168.0.8/30 -p icmp -m icmp --icmp-type 11 -j ACCEPT
-A INPUT -s 192.168.1.0/29 -p icmp -m icmp --icmp-type 3 -j ACCEPT
-A INPUT -s 192.168.1.0/29 -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A INPUT -s 192.168.1.0/29 -p icmp -m icmp --icmp-type 11 -j ACCEPT
-A INPUT -m state --state INVALID -j DROP
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG NONE -j DROP
-A INPUT -p tcp -m tcp ! --tcp-flags FIN,SYN,RST,ACK SYN -m state --state NEW -j DROP
#
-A FORWARD -i eth3 -o eth0 -j ACCEPT
-A FORWARD -i eth3 -o eth4 -j ACCEPT
-A FORWARD -i eth3 -o bond0 -j ACCEPT
-A FORWARD -i eth4 -o eth0 -j ACCEPT
-A FORWARD -i eth4 -o eth3 -j ACCEPT
-A FORWARD -i eth4 -o bond0 -j ACCEPT
-A FORWARD -i bond0 -o eth0 -j ACCEPT
-A FORWARD -i bond0 -o eth3 -j ACCEPT
-A FORWARD -i bond0 -o eth4 -j ACCEPT
-A FORWARD -i eth0 -o eth3 -j ACCEPT
-A FORWARD -i eth0 -o eth3 -p tcp -m tcp --dport 443 --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j ACCEPT
# -A FORWARD -i eth0 -o eth3 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
# -A FORWARD -i eth3 -o eth0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -m state --state INVALID -j DROP
-A FORWARD -i eth0 -o eth4 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i eth0 -o bond0 -j REJECT --reject-with icmp-port-unreachable
#
-A OUTPUT -o eth0 -j ACCEPT
-A OUTPUT -p tcp -m tcp ! --tcp-flags FIN,SYN,RST,ACK SYN -m state --state NEW -j DROP
COMMIT
# Completed on Tue Aug  8 13:31:52 2023
# Generated by iptables-save v1.8.4 on Tue Aug  8 13:31:52 2023
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
#
-A PREROUTING -i eth0 -p tcp -m tcp --dport 443 -j DNAT --to-destination 192.168.0.2
#
-A POSTROUTING -d 192.168.0.2/32 -o eth3 -p tcp -m tcp --dport 443 -j SNAT --to-source 192.168.0.1
-A POSTROUTING -s 192.168.0.0/30 -o eth0 -j SNAT --to-source 10.0.2.15
-A POSTROUTING -s 192.168.0.4/30 -o eth0 -j SNAT --to-source 10.0.2.15
-A POSTROUTING -s 192.168.0.8/30 -o eth0 -j SNAT --to-source 10.0.2.15
-A POSTROUTING -s 192.168.1.0/29 -o eth0 -j SNAT --to-source 10.0.2.15
# -A POSTROUTING ! -d 192.168.0.0/16 -o eth0 -j MASQUERADE
COMMIT
# Completed on Tue Aug  8 13:31:52 2023
